[gd_scene load_steps=5 format=3 uid="uid://bumx21n4k1vti"]

[ext_resource type="Script" uid="uid://cfdmd4efpgxmy" path="res://World/world.gd" id="1_il6x7"]
[ext_resource type="PackedScene" uid="uid://bfl0puvwvwax1" path="res://World/Base.tscn" id="2_y6flb"]
[ext_resource type="PackedScene" uid="uid://cb70m3kpoi1p4" path="res://HUD/UnitSpawner.tscn" id="3_mlekv"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_cmany"]
distance = -25.0

[node name="World" type="Node2D"]
script = ExtResource("1_il6x7")
metadata/_edit_vertical_guides_ = [65.0, 1155.0]
metadata/_edit_horizontal_guides_ = [463.0, 641.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 646.0
color = Color(0.45659465, 0.5780561, 0.3876705, 1)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(356, 424)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(-4, 13)
shape = SubResource("WorldBoundaryShape2D_cmany")

[node name="ColorRect" type="ColorRect" parent="Ground"]
offset_left = -357.0
offset_top = 38.0
offset_right = 796.0
offset_bottom = 224.0
color = Color(0.30545133, 0.22582436, 0.03206803, 1)

[node name="PlayerBase" parent="." instance=ExtResource("2_y6flb")]
position = Vector2(-4, 418)

[node name="AIBase" parent="." instance=ExtResource("2_y6flb")]
position = Vector2(1091, 419)
side = -1

[node name="UnitSpawner" parent="." instance=ExtResource("3_mlekv")]
offset_left = 1064.0
offset_top = 9.0
offset_right = 1141.0
offset_bottom = 40.0

[node name="AISpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="base_dead" from="PlayerBase" to="." method="_on_player_base_base_dead"]
[connection signal="base_dead" from="AIBase" to="." method="_on_ai_base_base_dead"]
[connection signal="spawn_pirate" from="UnitSpawner" to="." method="_on_unit_spawner_spawn_pirate"]
[connection signal="timeout" from="AISpawnTimer" to="." method="_on_ai_spawn_timer_timeout"]
